第二次提交

--- a/src/main/resources/templates/personalcenter.html
+++ b/src/main/resources/templates/personalcenter.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/amazeui.min.css"/>
   <link rel="stylesheet" href="css/wap.css"/>
     <link rel="stylesheet" href="css/layer.css"/>
-  <title>小萌萌</title>
+    <title th:text="(${username})?${username}:'未登录'">小萌萌</title>
 </head>
 <body style="background:#ececec">
   <div class="pet_mian" >
